fix: set svg vertical-align property to top

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -24,6 +24,10 @@
   margin: 0 auto;
 }
 
+.linkIcon svg {
+  vertical-align: top;
+}
+
 .linkLabel {
   display: none;
 }
@@ -45,10 +49,6 @@
 }
 
 @media (min-width: 1280px) {
-  .link svg {
-    display: block;
-  }
-
   .link {
     display: flex;
     align-items: center;
